@@ -43,13 +43,6 @@ extern int ppc_linux_in_sigtramp (CORE_ADDR pc, char *func_name);
 #define CANNOT_STORE_REGISTER(regno) ((regno) >= MQ_REGNUM)
 #endif
 
-#if 0 /* If skip_prologue() isn't too greedy, we don't need this */
-/* There is some problem with the debugging symbols generated by the
-   compiler such that the debugging symbol for the first line of a
-   function overlap with the function prologue.  */
-#define PROLOGUE_FIRSTLINE_OVERLAP
-#endif
-
 /* N_FUN symbols in shared libaries have 0 for their values and need
    to be relocated. */
 #define SOFUN_ADDRESS_MAYBE_MISSING
